# AURA-OSINT-ADVANCED-ECOSYSTEM

./: .aura-key  .ci-hotfix-applied  .dockerignore  .env  .env.backup  .env.darknet  .env.embeddings  .env.example  .env.production  .env.secure  .env.template  .env.unified  .eslintrc.js  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .inventoryignore  .obsolete-patterns.json  AMELIORATIONS-INTEGREES.md  ARCHITECTURE-OPTIMISEE.md  AUDIT-AURA-BROWSER-BACKEND.md  AUDIT-AURA-BROWSER-SECURITY.md  AUDIT-CRITIQUE-CORRECTIFS.md  AUDIT-ECOSYSTEM-ULTIMATE-V2-REPONSES.md  AUDIT-FINAL-REPORT.md  AUDIT-NETTOYAGE-RAPPORT.md  AUDIT-REALITE-CHECK.md  AUDIT.md  AURA-BROWSER-DIRECTIVE-RESPONSE.md.enc  AURA-BUILD-ALL.sh  AURA-Production-Report-20251006-064914.html  AURA-SECURITY-CHECKLIST.md.enc  AURA.desktop  AURA_OSINT_AUDIT_2024.md  AURA_OSINT_AUDIT_2024_DETAILLE.md  AUTO-TEST-HUMAIN.js  AUTO-TEST-INTELLIGENT.js  BUILD-AURA-ULTIMATE.sh  BUILD-COMPLETE.md  (+146 more)
.backup-20251008-192551/: package-lock.json  package.json
.brave-profile/: Last Version  Local State
.github/: RELEASE_TEMPLATE.md  dependabot.yml  labels.yml
.husky/: pre-commit
00-SYSTEM-CORE/: master-control-center.js
01-DATA-COLLECTION/: mega-form-500-fields.js
06-INVESTIGATION-WORKFLOWS/: thread-follower-engine.js
AURA_BROWSER/: pnpm-workspace.yaml
DOCUMENTATION TECHNIQUE INTERACTIVE/: AUDIT-OUTILS-OSINT-FINAL.md  DIRECTIVES2.md  README-ENHANCEMENTS.md  README.md  aura-osint-advanced-ecosystem.html  index.html  metrics_server.py  script.js  styles.css
Projet_Kaabache/Seffar_Browser/Noyau/: CMakeLists.txt
TikTok-Live-Analyser-USB/: DEMARRAGE-SIMPLE.bat  GUIDE-INVESTIGATEUR.html  INTEGRITY.sha256  VERSION  config.js  package-lock.json  package.json  simple-server.js  static-server.js
ai-engine/: package-lock.json  package.json  qwen-integration.js
aura-browser/: package-lock.json  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs
desktop/src-tauri/src/osint/: mod.rs  tiktok.rs  youtube.rs
(+1425 files in other folders)
